--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="skill-row">
           <img class="skill-1-img" src="Images/programming.png" alt="" width="30%">
           <h2>Web Development</h2>
-         <p>I have 2 years of experience in coding and developing websites. In Frontend, I specialize in: HTML, CSS, Bootstap, Javascript, Jquery and in Backend: Node.js, Express, EJS.</p>>
+         <p>I have 2 years of experience in coding and developing websites. In Frontend, I specialize in: HTML, CSS, Bootstap, Javascript, Jquery and in Backend: Node.js, Express, EJS.</p>
         </div>
         <div class="skill-row">
           <img class="skill-2-img" src="Images/mobile-app.png" alt="" width="30%">
